# ArtOS

./: .gitignore  CMakeLists.txt  README.md  art_executable.ld  art_kernel.ld  boot.s  cmake-iso.sh  cmake_test.sh  count_lines.sh  grub.cfg  kernel.c  kernel.cpp  linker.ld  rum_qemu.sh  toolchain.cmake
ArtOSTypes/: CMakeLists.txt  types.h
ArtOSTypes/Comparisons/: cmp_int.h
ArtOSTypes/DenseBoolean/: DenseBoolean.h  DenseBooleanArray.h
ArtOSTypes/Lists/: LinkedList.h
ArtOS_lib/: CMakeLists.txt  _types.h  event.h  kernel.cpp  kernel.h  limits.h
ArtOS_lib/SIMD/: SIMD.cpp  SIMD.h
ArtOS_lib/keymaps/: key_maps.h
doom/: CMakeLists.txt  doomgeneric_artos.c  doomgeneric_artos.cpp
doom/doom_specific/: i_allegromusic.c  i_allegrosound.c
doom/doomgeneric/: am_map.c  am_map.h  d_englsh.h  d_event.c  d_event.h  d_items.c  d_items.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_main.c  d_main.h  d_mode.c  d_mode.h  d_net.c  d_player.h  d_think.h  d_ticcmd.h  deh_main.h  deh_misc.h  doomdata.h  doomdef.c  doomdef.h  doomfeatures.h  doomgeneric.c  doomgeneric.h  doomkeys.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  gusconf.c  (+125 more)
executable_src/doom/: CMakeLists.txt  doomgeneric_artos.cpp
executable_src/doom/doom_specific/: doomgeneric_allegro.c  doomgeneric_emscripten.c  doomgeneric_sdl.c  doomgeneric_soso.c  doomgeneric_sosox.c  doomgeneric_win.c  doomgeneric_xlib.c  i_allegromusic.c  i_allegrosound.c  i_sdlmusic.c  i_sdlsound.c
executable_src/doom/doomgeneric/: am_map.c  am_map.h  config.h  d_englsh.h  d_event.c  d_event.h  d_items.c  d_items.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_main.c  d_main.h  d_mode.c  d_mode.h  d_net.c  d_player.h  d_textur.h  d_think.h  d_ticcmd.h  deh_main.h  deh_misc.h  deh_str.h  doom.h  doomdata.h  doomdef.c  doomdef.h  doomfeatures.h  doomgeneric.c  doomgeneric.h  doomkeys.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  dummy.c  f_finale.c  f_finale.h  (+140 more)
helloworld/: CMakeLists.txt  hello_link.ld  helloworld.cpp
pdclib/: CMakeLists.txt
pdclib/functions/_PDCLIB/: _PDCLIB_atomax.c  _PDCLIB_bigint.c  _PDCLIB_bigint10.c  _PDCLIB_bigint2.c  _PDCLIB_bigint32.c  _PDCLIB_bigint64.c  _PDCLIB_bigint_add.c  _PDCLIB_bigint_cmp.c  _PDCLIB_bigint_div.c  _PDCLIB_bigint_div_dig.c  _PDCLIB_bigint_invlog2.c  _PDCLIB_bigint_log2.c  _PDCLIB_bigint_mant.c  _PDCLIB_bigint_mul.c  _PDCLIB_bigint_mul_dig.c  _PDCLIB_bigint_shl.c  _PDCLIB_bigint_sub.c  _PDCLIB_bigint_tostring.c  _PDCLIB_closeall.c  _PDCLIB_filemode.c  _PDCLIB_getstream.c  _PDCLIB_init_file_t.c  _PDCLIB_is_leap.c  _PDCLIB_isstream.c  _PDCLIB_load_lc_collate.c  _PDCLIB_load_lc_ctype.c  _PDCLIB_load_lc_messages.c  _PDCLIB_load_lc_monetary.c  _PDCLIB_load_lc_numeric.c  _PDCLIB_load_lc_time.c  _PDCLIB_load_lines.c  _PDCLIB_prepread.c  _PDCLIB_prepwrite.c  _PDCLIB_print.c  _PDCLIB_print_fp.c  _PDCLIB_print_integer.c  _PDCLIB_print_string.c  _PDCLIB_scan.c  _PDCLIB_strtod_main.c  _PDCLIB_strtod_scan.c  (+5 more)
pdclib/functions/_dlmalloc/: malloc.c
pdclib/functions/_dtoa/: dtoa.c
pdclib/functions/_tzcode/: _PDCLIB_gmtcheck.c  _PDCLIB_gmtsub.c  _PDCLIB_increment_overflow.c  _PDCLIB_init_ttinfo.c  _PDCLIB_localsub.c  _PDCLIB_localtime_tzset.c  _PDCLIB_mktime_tzname.c  _PDCLIB_timesub.c  _PDCLIB_tzload.c  _PDCLIB_tzparse.c  _PDCLIB_tzset_unlocked.c  _PDCLIB_update_tzname_etc.c
pdclib/functions/ctype/: isalnum.c  isalpha.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
pdclib/functions/inttypes/: imaxabs.c  imaxdiv.c  strtoimax.c  strtoumax.c
pdclib/functions/locale/: localeconv.c  setlocale.c
pdclib/functions/stdio/: clearerr.c  fclose.c  feof.c  ferror.c  fflush.c  fgetc.c  fgetpos.c  fgets.c  fopen.c  fopen_s.c  fprintf.c  fputc.c  fputs.c  fread.c  freopen.c  freopen_s.c  fscanf.c  fseek.c  fsetpos.c  ftell.c  fwrite.c  getc.c  getchar.c  perror.c  printf.c  putc.c  putchar.c  puts.c  remove.c  rename.c  rewind.c  scanf.c  setbuf.c  setvbuf.c  snprintf.c  sprintf.c  sscanf.c  tmpfile_s.c  tmpnam.c  ungetc.c  (+7 more)
pdclib/functions/stdlib/: _Exit.c  abort.c  abort_handler_s.c  abs.c  at_quick_exit.c  atexit.c  atof.c  atoi.c  atol.c  atoll.c  bsearch.c  bsearch_s.c  div.c  exit.c  ignore_handler_s.c  labs.c  ldiv.c  llabs.c  lldiv.c  qsort.c  qsort_s.c  quick_exit.c  rand.c  set_constraint_handler_s.c  srand.c  strtol.c  strtoll.c  strtoul.c  strtoull.c
pdclib/functions/string/: memchr.c  memcmp.c  memcpy.c  memcpy_s.c  memmove.c  memmove_s.c  memset.c  memset_s.c  strcasecmp.c  strcat.c  strcat_s.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strcpy_s.c  strcspn.c  strdup.c  strerror.c  strerror_s.c  strerrorlen_s.c  strlen.c  strncasecmp.c  strncat.c  strncat_s.c  strncmp.c  strncpy.c  strncpy_s.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c  strtok_s.c  strxfrm.c
pdclib/functions/time/: asctime.c  asctime_s.c  ctime.c  ctime_s.c  difftime.c  gmtime.c  gmtime_s.c  localtime.c  localtime_s.c  mktime.c  strftime.c
pdclib/include/: assert.h  ctype.h  errno.h  float.h  inttypes.h  limits.h  locale.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  time.h  wctype.h
pdclib/include/pdclib/: _PDCLIB_glue.h  _PDCLIB_internal.h  _PDCLIB_lib_ext1.h  _PDCLIB_print.h  _PDCLIB_tzcode.h
pdclib/platform/ArtOS/functions/_PDCLIB/: _PDCLIB_Exit.cpp  _PDCLIB_changemode.c  _PDCLIB_close.c  _PDCLIB_fillbuffer.c  _PDCLIB_flushbuffer.cpp  _PDCLIB_open.c  _PDCLIB_open.cpp  _PDCLIB_realpath.c  _PDCLIB_remove.c  _PDCLIB_rename.c  _PDCLIB_seek.c  _PDCLIB_stdinit.c
pdclib/platform/ArtOS/functions/signal/: raise.c  signal.c
pdclib/platform/ArtOS/functions/stdio/: tmpfile.c  tmpfile.cpp
pdclib/platform/ArtOS/functions/stdlib/: getenv.c  getenv_s.c  system.c
pdclib/platform/ArtOS/functions/time/: clock.c  clock.cpp  time.c  time.cpp  (+1 more)
pdclib/platform/ArtOS/include/: float.h  signal.h  threads.h
test/: CMakeLists.txt  DenseBooleanArray_test.cpp  DenseBoolean_test.cpp  TODO  cmake_test.sh  string_test.cpp
(+324 files in other folders)
